--- a/index.html
+++ b/index.html
@@ -30,42 +30,42 @@
 				<div class="imageSidebar-container">
 					<img id="user-sidebar" src="./icons/userLandingIcon.svg" alt="User">
 				</div>
-				<a href="./user/index.html"><li>User</li></a>
+				<a href="./user/index.html"><li id="sidebar-userPlaceholder">User</li></a>
 		
 				<div class="imageSidebar-container">
 					<img id="manageUser-sidebar" src="./icons/manageUserLandingIcon.svg" alt="Manager User">
 				</div>
-				<a href="./manageUser/index.html"><li>Manage User</li></a>
+				<a href="./manageUser/index.html"><li id="sidebar-manageUserPlaceholder">Manage User</li></a>
 		
 				<div class="imageSidebar-container">
 					<img id="levelUp-sidebar" src="./icons/levelUpLandingIcon.svg" alt="Level Up">
 				</div>
-				<a href="./levelUp/index.html"><li>Level Up</li></a>
+				<a href="./levelUp/index.html"><li id="sidebar-levelUpPlaceholder">Level Up</li></a>
 		
 				<div class="imageSidebar-container">
 					<img id="liquidDelegating-sidebar" src="./icons/liquidDelegatingLandingIcon.svg" alt="Liquid delegating vault">
 				</div>
-				<a href="#"><li>█ED█C██D</li></a>
+				<a href="#"><li class="redacted">█ED█C██D</li></a>
 		
 				<div class="imageSidebar-container">
 					<img id="liquidStaking-sidebar" src="./icons/liquidStakingLandingIcon.svg" alt="Liquid staking vault">
 				</div>
-				<a href="#"><li>R█D██T█D</li></a>
+				<a href="#"><li class="redacted">R█D██T█D</li></a>
 		
 				<div class="imageSidebar-container">
 					<img id="marketplace-sidebar" src="./icons/marketplaceLandingIcon.svg" alt="Marketplace">
 				</div>
-				<a href="#"><li>█ED█C█E█</li></a>
+				<a href="#"><li class="redacted">█ED█C█E█</li></a>
 		
 				<div class="imageSidebar-container">
 					<img id="redeem-sidebar" src="./icons/redeemLandingIcon.svg" alt="Redeem dashboard">
 				</div>
-				<a href="#"><li>R█D██TE█</li></a>
+				<a href="#"><li class="redacted">R█D██TE█</li></a>
 		
 				<div class="imageSidebar-container">
 					<img id="stats-sidebar" src="./icons/statsLandingIcon.svg" alt="Statistics dashboard">
 				</div>
-				<a href="#"><li>█ED█C█E█</li></a>
+				<a href="#"><li class="redacted">█ED█C█E█</li></a>
 			</ul>
 		</div>
 		
